Заполнен фрагмент настроек + эффект нажатия

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+// Майк Пензе
     implementation "com.mikepenz:materialdrawer:7.0.0"
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
@@ -48,4 +48,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.annotation:annotation:1.1.0"
+
+    // Круглые аватарки
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
