--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.gerfoxmessage">
+    package="com.example.apptest">
 
     <application
         android:allowBackup="true"
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Diplom"
         tools:targetApi="m">
-        <activity android:name=".activites.RegisterActivity"
+        <activity android:name="com.example.apptest.activites.RegisterActivity"
             android:windowSoftInputMode="stateVisible|adjustResize"/>
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.apptest.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
