--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.apptest">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:usesCleartextTraffic="true"
@@ -12,6 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Diplom"
         tools:targetApi="m">
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
         <activity android:name="com.example.apptest.activites.RegisterActivity"
             android:windowSoftInputMode="stateVisible|adjustResize"/>
         <activity
