--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,8 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         google()
+        //noinspection JcenterRepositoryObsolete
+        jcenter()
         mavenCentral()
     }
 }
@@ -10,6 +12,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 rootProject.name = "Diplom"
